# swagger/getUserCompleteMission.swagger.yaml
@@ -1,21 +1,21 @@
 paths:
-  /users/{userId}/reviews:
+  /users/{userId}/missions-chanllenge:
     get:
       tags:
         - Users
-      summary: 사용자가 작성한 리뷰 목록 조회
+      summary: 사용자가 진행중인 미션 목록 조회
       parameters:
         - name: userId
           in: path
           schema:
             type: integer
           required: true
-        - name: reviewId
+        - name: missionId
           in: query
           required: false
           schema:
             properties:
-              reviewId:
+              missionId:
                 type: integer
         - name: paging
           in: query
@@ -26,7 +26,7 @@ paths:
                 type: integer
       responses:
         '200':
-          description: 리뷰 조회 성공!
+          description: 미션 조회 성공!
           schema:
             type: object
             properties:
@@ -45,18 +45,20 @@ paths:
               data:
                 type: array
                 example: {
-                  "reviewData": [
+                  "missionData": [
                     {
-                      "store_name": "음식점",
-                      "star": 5,
-                      "review_body": "리뷰2",
-                      "create_date": "2000.03.01"
+                      "mission_body": "미션내용",
+                      "term": "D-7",
+                      "reward": "300P",
+                      "complete": "진행중",
+                      "success": null
                     },
                     {
-                      "store_name": "카페",
-                      "rate": 4.5,
-                      "review_body": "리뷰1",
-                      "create_date": "2000.02.02"
+                      "mission_body": "미션내용",
+                      "term": "D-9",
+                      "reward": "450P",
+                      "complete": "진행완료",
+                      "success": "성공"
                     }
                   ],
                   "cursorId": 1
